...
                                        // Sets Header
                                        const Padding(
                                          padding: EdgeInsets.symmetric(horizontal: 16.0, vertical: 8.0),
                                          child: Row(
                                            mainAxisAlignment: MainAxisAlignment.spaceBetween,
                                            children: [
                                              Text('SÉRIE', style: TextStyle(fontSize: 10, fontWeight: FontWeight.bold)),
                                              Text('REPETIÇÕES', style: TextStyle(fontSize: 10, fontWeight: FontWeight.bold)),
                                              Text('CARGA', style: TextStyle(fontSize: 10, fontWeight: FontWeight.bold)),
                                              Text('FEITO', style: TextStyle(fontSize: 10, fontWeight: FontWeight.bold)),
                                            ],
                                          ),
                                        ),
...
                              backgroundColor: Colors.green,
                              foregroundColor: Colors.white,
                              minimumSize: const Size.fromHeight(50),
                              shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(30)),
                              elevation: 0,
                            ),
                            child: const Text('Finalizar Treino', style: TextStyle(fontWeight: FontWeight.bold, fontSize: 16)),
                          ),
                        ),
                      ],
                    ),
    );
  }
...
